--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,34 @@
+
 .wrapper{
-
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
+  height: 100vh;
+  background-color: rgb(237, 243, 186);
+  
+}
+
+#main-form {
+  margin-top: 10px;
+  width: 480px;
+  height: 500px;
 
 
+}
+
+.form-angular{
+  display: flex;
+  align-items: center;
+ 
+}
+
+#grow {
+  width: 100%;
+}
+
+#grow-btn {
+  width: 60%;
+  margin-top: 20px;
+  padding: 7px;
+  border-radius: 5px ;
 }
